updated some logic but code still gets stuck

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
         "initializer_list": "cpp",
         "utility": "cpp",
         "cmath": "cpp",
-        "complex": "cpp"
+        "complex": "cpp",
+        "geometry": "cpp"
     }
 }
